1 cargue del proyecto

--- a/src/sass/_courses.scss
+++ b/src/sass/_courses.scss
@@ -30,7 +30,7 @@
     box-sizing: border-box;
     position: absolute;
     @include mixingfunc.measures(590px, 51px, 29px, 131px);
-    @include mixingfunc.font-style(Poppins, normal, 400, 25px, 130%, justify);
+    @include mixingfunc.font-style(Arial, normal, 400, 25px, 130%, justify);
     border: 1px solid #8f8f8f;
     border-radius: 10px;
     padding-left: 19px;
@@ -43,7 +43,7 @@
     @include mixingfunc.measures(590px, 51px, 633px, 131px);
     border: 1px solid #8f8f8f;
     border-radius: 10px;
-    font-family: "Poppins";
+    font-family: Arial;
     font-style: normal;
     font-weight: 400;
     font-size: 25px;
@@ -79,7 +79,7 @@
 
   background: #338af3;
   border-radius: 20px;
-  font-family: "Inter";
+  font-family: Arial;
   font-style: normal;
   font-weight: 600;
   font-size: 25px;
@@ -97,13 +97,13 @@
   position: absolute;
   width: 278px;
   height: 39px;
-  left: 17px;
+  left: 30px;
   top: 11px;
 
-  font-family: "Inter";
+  font-family: Arial;
   font-style: normal;
   font-weight: 600;
-  font-size: 30px;
+  font-size: 28px;
   line-height: 130%;
   /* identical to box height, or 39px */
 
@@ -170,7 +170,7 @@
 
 .btn-courses {
   @include mixingfunc.measures(226px, 48px, 1000px, 539px);
-  @include mixingfunc.font-style(Inter, normal, 600, 25px, 130%, center);
+  @include mixingfunc.font-style(Arial, normal, 600, 25px, 130%, center);
   background: #338af3;
   border-radius: 20px;
   position: absolute;
@@ -190,105 +190,57 @@
 /*------------------Section Modal-----------*/
 
 #modal-container-course {
+  opacity: 0;
   visibility: hidden;
   position: absolute;
   z-index: 1000;
   @include mixingfunc.measures(100%, 100%, 0, 0);
   background-color: rgba(143, 143, 143, 0.65);
 }
-.modal-close-course {
-  transform: translateY(-200%);
-}
+
 
 .modal-course {
-  position: absolute;
-  width: 928px;
-  height: 563px;
-  left: 456px;
-  top: 224px;
-
-  background: #ffffff;
+  position: relative;
+  width: 930px;
+  height: 800px;
+  left: 493px;
+  top: 70px;
+  border-radius: 10px;
+ background-color: #ffffff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 20px;
   transition: transform 1s;
   transform: translateY(0%);
 
-  .parrafo {
-    position: absolute;
-    @include mixingfunc.measures(850px, 307px, 39px, 71px);
-    @include mixingfunc.font-style(Poppins, normal, 400, 25px, 130%, center);
-    text-align: justify;
-    color: #000000;
-    overflow-y: scroll;
-  }
-  .title-modal-course {
-    position: absolute;
-    @include mixingfunc.measures(328px, 32px, 300px, 23px);
-    @include mixingfunc.font-style(Poppins, normal, 700, 25px, 130%, center);
-    color: #000000;
-  }
-
   .close-course {
     position: absolute;
-    left: 95.04%;
+    left: 94.2%;
     right: 1.72%;
-    top: 2.11%;
+    top: 2.50%;
     bottom: 93.65%;
     color: #000;
+    z-index: 1000;
     i {
       font-size: 30px;
     }
   }
-  .cont-p-courses {
+
+  .cont-p-course {
     position: absolute;
-    width: 850px;
-    height: 346px;
-    left: 39px;
-    top: 71px;
-    p {
-      font-family: "Poppins";
-      font-style: normal;
-      font-weight: 400;
-      font-size: 25px;
-      line-height: 130%;
-      /* or 32px */
-
-      text-align: justify;
-
-      color: #000000;
-    }
+    width: 920px;
+    max-height: 785px;
+    top: 10px;
+    bottom: 10px;
+    left: 10px;
+    right: 10px;
+    overflow: auto;
+    padding: 20px 40px 20px 20px;
   }
-  .pe {
-    position: absolute;
-    width: 171px;
-    height: 32px;
-    left: 39px;
-    top: 462px;
-    font-family: "Poppins";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 25px;
-    line-height: 130%;
-    color: #000000;
-  }
-  .do {
-    position: absolute;
-    width: 84px;
-    height: 32px;
-    left: 39px;
-    top: 494px;
-
-    font-family: "Poppins";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 25px;
-    line-height: 130%;
-    /* or 32px */
-
-    color: #000000;
-  }
+ 
 }
-
+.modal-cl {
+  transform: translateY(-200%); 
+ }
 /*-------------Modal delete --------------------------*/
 
 
@@ -315,7 +267,7 @@
   h3 {
     position: absolute;
     @include mixingfunc.measures(166px, 39px, 366px, 21px);
-    @include mixingfunc.font-style(Inter, normal, 600, 30px, 130%, center);
+    @include mixingfunc.font-style(Arial, normal, 600, 30px, 130%, center);
     color: #000000;
   }
 }
@@ -323,7 +275,7 @@
   box-sizing: border-box;
   position: absolute;
   @include mixingfunc.measures(808px, 129px, 45px, 82px);
-  @include mixingfunc.font-style(Inter, normal, 300, 20px, 130%, center);
+  @include mixingfunc.font-style(Arial, normal, 300, 20px, 130%, center);
   border: 1px solid #8f8f8f;
   border-radius: 10px;
   resize: none;
@@ -336,7 +288,7 @@
   position: absolute;
   /*   @include mixingfunc.measures(186px, 48px, 667px, 237px); */
   @include mixingfunc.measures(137px, 32px, 692px, 245px);
-  @include mixingfunc.font-style(Inter, normal, 700, 25px, 130%, center);
+  @include mixingfunc.font-style(Arial, normal, 700, 25px, 130%, center);
   background: #d80027;
   border-radius: 20px;
   position: absolute;
@@ -346,9 +298,44 @@
 .btn-dc2 {
   position: absolute;
   @include mixingfunc.measures(84px, 32px, 45px, 245px);
-  @include mixingfunc.font-style(Inter, normal, 600, 25px, 130%, center);
+  @include mixingfunc.font-style(Arial, normal, 600, 25px, 130%, center);
   color: #000000;
 }
 .modal-close-dc {
   transform: translateY(-200%);
+}
+
+
+.icons-course {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  i {
+    width: 30px;
+    height: 30px;
+  }
+
+  .edit-course {
+    font-size: 30px;
+    color: #ff9811;
+    transition: all 0.5s ease;
+    &:hover {
+      color: #6e7f8f;
+    }
+  }
+  .remove-course {
+    font-size: 30px;
+    color: red;
+     &:hover {
+      color: #6e7f8f;
+    }
+  }
+
+  .read-course {
+    font-size: 30px;
+    color: #0057ff;
+     &:hover {
+      color: #6e7f8f;
+    }
+  }
 }
