--- a/src/views/menbership.html
+++ b/src/views/menbership.html
@@ -9,56 +9,50 @@
     <link href="https://cdn.jsdelivr.net/npm/suneditor@latest/dist/css/suneditor.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/suneditor@latest/dist/suneditor.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/suneditor@latest/src/lang/en.js"></script>
-    
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5.49.0/lib/codemirror.min.css">
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5.49.0/lib/codemirror.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5.49.0/mode/htmlmixed/htmlmixed.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5.49.0/mode/xml/xml.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5.49.0/mode/css/css.js"></script>
-    <title>Resources</title>
+    <title>Memberships</title>
 </head>
 
 <body>
-    
     <div id="container">
 
-        <section class="cont-new-resource open-form-resource">
-            <section class=" crud-resource" id="cont-form-resource">
+        <section class="cont-new-member open-form-member">
+            <section class=" crud-member" id="cont-form-memeber">
                 <article>
-                    <p class="crud-title-resource font-title-resource">Create new resource</p>
-                    <form class="crud-form-resource">
+                    <p class="crud-title-member font-title-member">Create new membership</p>
+                    <form action="" class="crud-form-member">
                         <input type="hidden" name="idi">
 
-                        <input class="title-resource" type="text" name="resourceTitle" placeholder="Resource Title"
+                        <input class="title-member" type="text" name="memberName" placeholder="Membership name"
                             required>
 
-                        <select class="input-category-resource" name="category">
+                        <select class="input-category-member" name="memberCategory">
                             <option selected disabled="">Category</option>
-                            <option>Books</option>
-                            <option>Directives</option>
-                            <option>Paradigm</option>
-                            <option>Creative</option>
-                            <option>Accountabilly</option>
-                            <option>Research</option>
-                            <option>Identity</option>
-                            <option>Quality</option>
+                            <option>Paid</option>
                             <option>Program</option>
+                            <option>Accounts</option>
+                            <option>Intranet</option>
+                            <option>Brandingr</option>
+                            <option>Applocations</option>
+                            <option>Interactions</option>
                             <option>Functionality</option>
-                            <option>Configuration</option>
+
                         </select>
 
-                        <select class="input-tags-resource" name="tags">
-                            <option selected disabled="">Optional Tags</option>
-                            <option>Read</option>
-                            <option>Listen</option>
-                            <option>Speak</option>
-                        </select>
+                        <input class="input-price-member" type="number" name="memberPrice" placeholder="Price*">
+                        <div>
 
-                        <div id="area-resource">
-                            <textarea name="description" class="txtarea-resource" cols="30" rows="10" style="height: 500px;"> </textarea>
-                        </div>
+                            <div id="area-member">
+                                <textarea name="memberDescription" class="txtarea-member" cols="30"
+                                    rows="10"> </textarea>
+                            </div>
                     </form>
-                    <input id="create-resource" type="submit" value="Create resource" class="btn-submit">
+                    <input id="create-member" type="submit" value="Create membership" class="btn-submit">
                     <input class="cancel-form" type="button" value="Cancel">
                 </article>
 
@@ -72,13 +66,13 @@
                 <li><a href="/src/views/news.html">News</a></li>
                 <li><a href="/src/views/courses/courses.html">Courses</a></li>
                 <li><a href="/src/views/activity/actividades.html">Activities</a></li>
-                <li class=" press"><a href="/src/views/resource/resource.html">Resources</a></li>
+                <li><a href="/src/views/resource/resource.html">Resources</a></li>
                 <li><a href="">Certificates</a></li>
-                <li><a href="" class="space">Private classes</a></li>
+                <li><a href="" class="space">Private Classes</a></li>
                 <div class="space-top">
                     <li><a href="/src/views/promotions/promotions.html">Offers</a></li>
-                    <li><a href="/src/views/menbership.html">Memberships</a></li>
-                    <li><a href=" /src/views/referrals.html">Referrals</a></li>
+                    <li class=" press"><a href="/src/views/menbership.html">Memberships</a></li>
+                    <li><a href="/src/views/referrals.html">Referrals</a></li>
                     <li><a href="/src/views/sponsors.html">Sponsors</a></li>
                     <li><a href="/src/views/index.html">Reviews</a>
                 </div>
@@ -97,41 +91,42 @@
             </div>
         </section>
 
-        <section class="cont-tables-resource ">
-            <div class="cont-table-resource_blue">
-                <table class="crud-table-resource table-resource">
+        <section class="cont-tables-member ">
+            <div class="cont-table-member_blue">
+                <table class="crud-table-member table-member">
+
                 </table>
             </div>
-            <button class="btn-resource">Add new resource</button>
+
+
+            <button class="btn-member">Add new membership</button>
+
         </section>
 
-        <section id="modal-container-resource">
-            <div class="modal-resource modal-clos">
-                <div class="close-resource perr"><i class="fas fa-times-circle poi"></i></div>
-                <div class="cont-p-resource">
+        <section id="modal-container-member">
+            <div class="modal-member modal-clm">
+                <div class="close-member"><i class="fas fa-times-circle poi"></i></div>
+                <div class="cont-p-member">
                 </div>
-                    
-                    
         </section>
 
-        <form class="form-delete-dr" action="">
-            <section id="modal-container-dr">
-                <div class="modal-dr modal-close-dr">
+
+        <form class="form-delete" action="">
+            <section id="modal-container-d">
+                <div class="modal-d modal-close-d">
                     <h3>Delete item</h3>
-                    <textarea name="cuadro" id="text-dr" cols="30" rows="10" placeholder="Reason..." required></textarea>
-                    <input type="submit" class="close-dr bnt-dr" value="Yes, Delete"></input>
-                    <button class="close-dr btn-dr2">Cancel</button>
+                    <textarea name="cuadro" id="text-d" cols="30" rows="10" placeholder="Reason..." required></textarea>
+                    <button type="submit" class="close-d bnt-d">Yes, Delete</button>
+                    <button class="close-d btn-d2">Cancel</button>
 
                 </div>
             </section>
 
         </form>
 
-        <section class="container-notify-succes alert" id="alert">
+        <section class="container-notify-succes sucesx alert " id="alert">
             <i class="fas fa-check-circle close-notify-succes"></i>
             <p class="parrafo-succes"></p>
-            <!--   <i class="fas fa-check-circle check-succes"></i> -->
-
         </section>
 
         <section id="container-noti">
@@ -142,10 +137,8 @@
 
         </section>
 
-
     </div>
-<!--     <script src="/src/js/index.js" type="module"></script> -->
-<script src="/src/js/resources/main-resurces.js" type="module"></script>
+    <script src="/src/js/memberships/main-membership.js" type="module"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://kit.fontawesome.com/d65d9c50b6.js" crossorigin="anonymous">
     </script>
