--- a/src/views/news.html
+++ b/src/views/news.html
@@ -9,45 +9,50 @@
     <link href="https://cdn.jsdelivr.net/npm/suneditor@latest/dist/css/suneditor.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/suneditor@latest/dist/suneditor.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/suneditor@latest/src/lang/en.js"></script>
-    
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5.49.0/lib/codemirror.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/codemirror@5.49.0/lib/codemirror.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/codemirror@5.49.0/mode/htmlmixed/htmlmixed.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/codemirror@5.49.0/mode/xml/xml.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/codemirror@5.49.0/mode/css/css.js"></script>
-    <title>Courses</title>
+    <title>News</title>
 </head>
 
 <body>
     <div id="container">
 
-        <section class="cont-new-course open-form-course ">
-            <section class=" crud-course" id="cont-form-courses">
+        <section class="cont-new-news open-form-news ">
+            <section class=" crud-news" id="cont-form-news">
                 <article>
-                    <p class="crud-title-course font-title-course">Create new course</p>
-                    <form action="" class="crud-form-course">
+                    <p class="crud-title-news font-title-news">Create new news</p>
+                    <form action="" class="crud-form-news">
 
                         <input type="hidden" name="idi">
-                        <input class="title-course" type="text" name="courseTitle" placeholder="Course Title" required>
-                        <select class="input-category-course" name="category">
+                        <input class="title-news" type="text" name="titleNews" placeholder="Title new" required>
+                        <select class="input-category-news" name="categoryNews">
                             <option selected disabled="">Category</option>
-                            <option>Bussiness</option>
-                            <option>Engineer</option>
-                            <option>Specialist</option>
                             <option>Associate</option>
-                            <option>Producer</option>
                             <option>Developer</option>
-                            <option>Manager</option>
-                            <option>Technician</option>
+                            <option>Designer</option>
+                            <option>Assistant</option>
+                            <option>Strategist</option>
+                            <option>Agent</option>
+                            <option>Analist</option>
+                            <option>Specialist</option>
+                            <option>Supervisor</option>
+                        </select>
+                        <select class="input-price-news" name="tagsNews">
+                            <option selected disabled="">Optional tags</option>
+                            <option>Agent</option>
+                            <option>Liaison</option>
+                            <option>Analiyt</option>
+                            <option>Facilitator</option>
+                            <option>Architect</option>
+                            <option>Producer</option>
+                            <option>Specialist</option>
                             <option>Assistant</option>
                         </select>
 
-                        <input class="input-price-course" type="number" name="price" placeholder="Price*">
-                        <div id="area-courses">
-                            <textarea name="description" class="txtarea-course" cols="30" rows="10"> </textarea>
+
+                        <div id="area-news">
+                            <textarea name="description" class="txtarea-news" cols="30" rows="10"> </textarea>
                         </div>
                     </form>
-                    <input id="create-course" type="submit" value="Create course" class="btn-submit">
+                    <input id="create-news" type="submit" value="Create news" class="btn-submit">
                     <input class="cancel-form" type="button" value="Cancel">
                 </article>
 
@@ -59,8 +64,8 @@
             <div class="menu__list">
                 <div>
                     <li><a href="/src/views/student.html">Students</a></li>
-                    <li><a href="/src/views/news.html">News</a></li>
-                    <li class="press"><a href="/src/views/courses/courses.html">Courses</a></li>
+                    <li class="press"><a href="/src/views/news.html">News</a></li>
+                    <li><a href="/src/views/courses/courses.html">Courses</a></li>
                     <li><a href="/src/views/activity/actividades.html">Activities</a></li>
                     <li><a href="/src/views/resource/resource.html">Resources</a></li>
                     <li><a href="">Certificates</a></li>
@@ -69,8 +74,8 @@
                 </div>
                 <div class="space-top">
                     <li class="space2"><a href="/src/views/promotions/promotions.html">Offers</a></li>
-                    <li><a href="/src/views/menbership.html"">Memberships</a></li>
-                                                                                 <li><a href=" /src/views/referrals.html">Referrals</a>
+                    <li><a href="/src/views/menbership.html">Memberships</a></li>
+                    <li><a href=" /src/views/referrals.html">Referrals</a>
                     </li>
                     <li><a href="/src/views/sponsors.html">Sponsors</a></li>
                     <li><a href="/src/views/index.html">Reviews</a>
@@ -87,20 +92,20 @@
             </div>
         </section>
 
-        <section class="cont-tables-course">
-            <div class="cont-table-course_blue">
-                <table class="crud-table-course table-course">
+        <section class="cont-tables-news">
+            <div class="cont-table-news_blue">
+                <table class="crud-table-news table-news">
                 </table>
             </div>
-            <button class="btn-courses">Add new course</button>
+            <button class="btn-news">Add new news</button>
         </section>
 
-        <section id="modal-container-course">
-            <div class="modal-course modal-cl">
-                <div class="close-course"><i class="fas fa-times-circle poi"></i></div>
-                <div class="cont-p-course">
+        <section id="modal-container-news">
+            <div class="modal-news modal-cl">
+                <div class="close-news"><i class="fas fa-times-circle poi"></i></div>
+                <div class="cont-p-news">
                 </div>
-                    
+
         </section>
 
         <form class="form-delete" action="">
@@ -123,7 +128,7 @@
         </section>
 
 
-            <section id="container-noti">
+        <section id="container-noti">
             <div class="noti__idea"></div>
             <p class="noti__parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat deserunt eius,
                 animi fugiat debitis, id ipsa sint recusandae eum nobis odit sequi nihil dicta beatae qui eveniet
@@ -133,7 +138,7 @@
 
 
     </div>
-    <script src="/src/js/courses/main-courses.js" type="module"></script>
+    <script src="/src/js/news/main-new.js" type="module"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://kit.fontawesome.com/d65d9c50b6.js" crossorigin="anonymous">
     </script>
