--- a/src/views/promotions/promotions.html
+++ b/src/views/promotions/promotions.html
@@ -6,7 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/src/css/style.css">
-    <title>Courses</title>
+    <link href="https://cdn.jsdelivr.net/npm/suneditor@latest/dist/css/suneditor.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/suneditor@latest/dist/suneditor.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/suneditor@latest/src/lang/en.js"></script>
+    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5.49.0/lib/codemirror.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/codemirror@5.49.0/lib/codemirror.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/codemirror@5.49.0/mode/htmlmixed/htmlmixed.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/codemirror@5.49.0/mode/xml/xml.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/codemirror@5.49.0/mode/css/css.js"></script>
+    <title>Offers</title>
 </head>
 
 <body>
@@ -15,13 +24,14 @@
         <section class="cont-new-promotion open-form-promotion">
             <section class=" crud-promotion" id="cont-form-promotion">
                 <article>
-                    <p class="crud-title-promotion font-title-promotion">Create New Promotion</p>
+                    <p class="crud-title-promotion font-title-promotion">Create new promotion</p>
                     <form action="" class="crud-form-promotion">
-
-                        <input class="title-promotion" type="text" name="courseTitle" placeholder="Prmotion name"
+                        <input type="hidden" name="idi">
+                        
+                        <input class="title-promotion" type="text" name="promotionTitle" placeholder="Prmotion name"
                             required>
 
-                        <select class="input-category-promotion" name="category">
+                        <select class="input-category-promotion" name="promotionCategory">
                             <option selected disabled="">Category</option>
                             <option>Bussiness</option>
                             <option>Engineer</option>
@@ -33,27 +43,22 @@
                             <option>Technician</option>
                             <option>Assistant</option>
                         </select>
+                        <input class="input-DateStart-promotion" type="datetime-local" name="promotionDateStart" placeholder="Start Date*">
+                        <input class="input-price-promotion" type="number" name="promotionPrice" placeholder="Price*">
                         <div>
-
-                            <input class="input-DateStart-promotion" type="date" name="dateeent"
-                                placeholder="Start Date*">
-                            <input class="input-price-promotion" type="number" name="price" placeholder="Price*">
-                            <input class="input-DateEnd-promotion" type="date" name="datestart"
+                            <input class="input-DateEnd-promotion" type="datetime-local" name="promotionDateEnd"
                                 placeholder="Final Date*">
-                            <input class="input-offer-promotion" type="number" name="offer" placeholder="Offer*">
-                        </div>
+                            </div>
+                            <input class="input-offer-promotion" type="text" name="promotionOffer" placeholder="Offer*">
 
 
                         <div id="area-promotion">
-                            <textarea name="description" class="txtarea-promotion" cols="30" rows="10"> </textarea>
+                            <textarea name="promotionDescription" class="txtarea-promotion" cols="30" rows="10"> </textarea>
                         </div>
-
-
-                        <input id="create-promotion" type="submit" value="Create Promotion">
-                        <input type="hidden" name="id">
-
-
+                        
                     </form>
+                    <input id="create-promotion" type="submit" value="Create offer" class="btn-submit">
+                    <input class="cancel-form" type="button" value="Cancel">
                 </article>
 
             </section>
@@ -62,8 +67,8 @@
         <div class="menu">
             <a href="" class="menu__logo"></a>
             <div class="menu__list">
-                <li><a href="">Students</a></li>
-                <li><a href="">News</a></li>
+                <li><a href="/src/views/student.html">Students</a></li>
+                <li><a href="/src/views/news.html">News</a></li>
                 <li><a href="/src/views/courses/courses.html">Courses</a></li>
                 <li><a href="/src/views/activity/actividades.html">Activities</a></li>
                 <li><a href="/src/views/resource/resource.html">Resources</a></li>
@@ -71,9 +76,9 @@
                 <li><a href="" class="space">Private Classes</a></li>
                 <div class="space-top">
                     <li class=" press"><a href="">Offers</a></li>
-                    <li><a href="">Memberships</a></li>
-                    <li><a href="">Referrals</a></li>
-                    <li><a href="">Sponsors</a></li>
+                    <li><a href="/src/views/menbership.html">Memberships</a></li>
+                    <li><a href=" /src/views/referrals.html">Referrals</a></li>
+                    <li><a href="/src/views/sponsors.html">Sponsors</a></li>
                     <li><a href="/src/views/index.html">Reviews</a>
                 </div>
 
@@ -94,49 +99,21 @@
         <section class="cont-tables-promotion ">
             <div class="cont-table-promotion_blue">
                 <table class="crud-table-promotion table-promotion">
-                    <thead>
-                        <tr>
-                            <th>ID</th>
-                            <th>Offer Title</th>
-                            <th>Price</th>
-                            <th>Offer</th>
-                            <th>Date</th>
-                            <th>Actions</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-
-                    </tbody>
+            
                 </table>
             </div>
 
 
-            <button class="btn-promotion">Add New Offer</button>
+            <button class="btn-promotion">Add new offer</button>
 
         </section>
 
         <section id="modal-container-promotion">
-            <div class="modal-promotion modal-close-promotion">
-                <h3 class="title-modal-promotion">National Data Consultant</h3>
-                <div class="close-promotion"><i class="fas fa-times-circle"></i></div>
-                <p class="price-prom">342.00</p>
-                <p class="offer-prom">99.00</p>
-                <p class="date-prom">26/12/22</p>
+            <div class="modal-promotion modal-clp">
+                <div class="close-promotion"><i class="fas fa-times-circle poi"></i></div>
                 <div class="cont-p-promotion">
-                    <p>
-                        Facilis recusandae natus dolores quidem consectetur animi quis accusantium nostrum a hic
-                        cupiditate voluptas, nihil eveniet, nam placeat necessitatibus inventore repellat architecto
-                        laborum repudiandae, veniam labore! Odio minima porro vero?
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti doloribus quae quam eveniet
-                        provident! Commodi, illo aperiam eveniet earum saepe id animi vel ipsam, nobis ad porro placeat
-                        neque explicabo?
-                    </p>
-                    <div class="off"></div>
                 </div>
-
-            </div>
         </section>
-
         <form class="form-delete" action="">
             <section id="modal-container-d">
                 <div class="modal-d modal-close-d">
@@ -150,21 +127,18 @@
 
         </form>
 
-        <section class="container-notify-succes sucesx " id="alert">
+        <section class="container-notify-succes sucesx alert " id="alert">
             <i class="fas fa-check-circle close-notify-succes"></i>
             <p class="parrafo-succes"></p>
-
-
-
         </section>
 
-        <!--    <section id="container-noti">
+        <section id="container-noti">
             <div class="noti__idea"></div>
             <p class="noti__parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat deserunt eius,
                 animi fugiat debitis, id ipsa sint recusandae eum nobis odit sequi nihil dicta beatae qui eveniet
                 mollitia, excepturi adipisci.</p>
 
-        </section> -->
+        </section>
 
         <template id="crud-template-promotion">
             <tr>
@@ -185,7 +159,7 @@
         </template>
 
     </div>
-    <script src="/src/js/index.js" type="module"></script>
+    <script src="/src/js/offers/main-offer.js" type="module"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://kit.fontawesome.com/d65d9c50b6.js" crossorigin="anonymous">
     </script>
