--- a/src/sass/_createActi.scss
+++ b/src/sass/_createActi.scss
@@ -49,7 +49,7 @@
     box-sizing: border-box;
     position: absolute;
     @include mixingfunc.measures(590px, 51px, 29px, 131px);
-    @include mixingfunc.font-style(Poppins, normal, 400, 25px, 130%, justify);
+    @include mixingfunc.font-style(Arial, normal, 400, 25px, 130%, justify);
     border: 1px solid #8f8f8f;
     border-radius: 10px;
     padding-left: 19px;
@@ -62,7 +62,7 @@
     @include mixingfunc.measures(590px, 51px, 633px, 131px);
     border: 1px solid #8f8f8f;
     border-radius: 10px;
-    font-family: "Poppins";
+    font-family: Arial;
     font-style: normal;
     font-weight: 400;
     font-size: 25px;
@@ -77,7 +77,7 @@
     @include mixingfunc.measures(590px, 51px, 633px, 197px);
     border: 1px solid #8f8f8f;
     border-radius: 10px;
-    font-family: "Poppins";
+    font-family: Arial;
     font-style: normal;
     font-weight: 400;
     font-size: 25px;
@@ -96,7 +96,7 @@
     top: 197px;
     border: 1px solid #8f8f8f;
     border-radius: 10px;
-    font-family: "Poppins";
+    font-family: Arial;
     font-style: normal;
     font-weight: 400;
     font-size: 25px;
@@ -137,7 +137,7 @@
 
   background: #338af3;
   border-radius: 20px;
-  font-family: "Inter";
+  font-family: Arial;
   font-style: normal;
   font-weight: 600;
   font-size: 25px;
@@ -155,13 +155,13 @@
   position: absolute;
   width: 278px;
   height: 39px;
-  left: 17px;
+  left: 30px;
   top: 11px;
 
-  font-family: "Inter";
+  font-family: Arial;
   font-style: normal;
   font-weight: 600;
-  font-size: 30px;
+  font-size: 28px;
   line-height: 130%;
   /* identical to box height, or 39px */
 
@@ -224,7 +224,7 @@
     padding-right: 34px;
     padding-top: 15px;
     padding-bottom: 15px;
-    font-family: "Poppins";
+    font-family: Arial;
     font-style: normal;
     font-weight: 600;
     font-size: 30px;
@@ -243,7 +243,7 @@
     left: 364px;
     top: 18px;
 
-    font-family: "Poppins";
+    font-family: Arial;
     font-style: normal;
     font-weight: 600;
     font-size: 30px;
@@ -259,7 +259,7 @@
     left: 364px;
     top: 18px;
 
-    font-family: "Poppins";
+    font-family: Arial;
     font-style: normal;
     font-weight: 600;
     font-size: 30px;
@@ -275,7 +275,7 @@
     left: 364px;
     top: 18px;
 
-    font-family: "Poppins";
+    font-family: Arial;
     font-style: normal;
     font-weight: 600;
     font-size: 30px;
@@ -311,34 +311,101 @@
   position: absolute;
   bottom: 80px;
   right: 30px;
-  z-index: 150;
-  transition: all 0.9s ease;
+  z-index: 0;
+  transition: all 5s ease;
+
+
+  
+  
 }
 
-.alert.success {
+.success {
   background: #038c33;
   border: 1px #60d560 solid;
   color: #15540d;
   border-radius: 20px;
+  transition: all 5s ease;
 }
 
-.alert.deleted {
+.deleted {
   background: #f82222;
   border: 1px #e14747 solid;
+  transition: all 5s ease;
 
   border-radius: 20px;
 }
-.alert.update {
+.update {
   background: #ff9811;
   border: 1px #eab108 solid;
   border-radius: 20px;
+  transition: all 5s ease;
 }
+
+/*------------------Section Modal-----------*/
+
+#modal-container-activity {
+  opacity: 0;
+ visibility: hidden;  
+ position: absolute;
+ z-index: 1000;
+ @include mixingfunc.measures(100%, 100%, 0, 0);
+ background-color: rgba(143, 143, 143, 0.65);
+}
+
+
+.modal-activity {
+ position: relative;
+ width: 930px;
+ height: 800px;
+ left: 493px;
+ top: 70px;
+ border-radius: 10px;
+background-color: #ffffff;
+ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+ border-radius: 20px;
+ transition: transform 1s;
+ transform: translateY(0%);
+
+ .close-activity {
+   position: absolute;
+   left: 94.2%;
+   right: 1.72%;
+   top: 2.50%;
+   bottom: 93.65%;
+   color: #000;
+   z-index: 1000;
+   i {
+     font-size: 30px;
+   }
+ }
+
+ .cont-p-activity {
+   position: absolute;
+   width: 920px;
+   max-height: 785px;
+   top: 10px;
+   bottom: 10px;
+   left: 10px;
+   right: 10px;
+   overflow: auto;
+   padding: 20px 40px 20px 20px;
+ }
+
+}
+.modal-cla {
+ transform: translateY(-200%); 
+}
+
+
+
+
 
 /*-------------Modal delete --------------------------*/
 
 
 
 #modal-container-de {
+  opacity: 0;
   visibility: hidden;
   position: absolute;
   z-index: 1000;
@@ -399,4 +466,38 @@
 }
 .noticia {
   transform: translateY(-900%);
+}
+.icons-activity {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  i {
+    width: 35px;
+    height: 43px;
+    padding-top: 3px;
+    transition: all 0.3s ease;
+  }
+
+  .edit-activity{
+    font-size: 34px;
+    color: #ff9811;
+    &:hover {
+      color: #6e7f8f;
+    }
+  }
+  .remove-activity{
+    font-size: 34px;
+    color: red;
+     &:hover {
+      color: #6e7f8f;
+    }
+  }
+
+  .read-activity {
+    font-size: 34px;
+    color: #0057ff;
+     &:hover {
+      color: #6e7f8f;
+    }
+  }
 }
