--- a/src/sass/_modal-window.scss
+++ b/src/sass/_modal-window.scss
@@ -22,7 +22,7 @@
   h3 {
     position: absolute;
     @include mixingfunc.measures(166px, 39px, 366px, 21px);
-    @include mixingfunc.font-style(Inter, normal, 600, 30px, 130%, center);
+    @include mixingfunc.font-style(Arial, normal, 600, 30px, 130%, center);
     color: #000000;
   }
 }
@@ -30,7 +30,7 @@
   box-sizing: border-box;
   position: absolute;
   @include mixingfunc.measures(808px, 129px, 45px, 82px);
-  @include mixingfunc.font-style(Inter, normal, 300, 20px, 130%, center);
+  @include mixingfunc.font-style(Arial, normal, 300, 20px, 130%, center);
   border: 1px solid #8f8f8f;
   border-radius: 10px;
   resize: none;
@@ -43,7 +43,7 @@
   position: absolute;
   /*   @include mixingfunc.measures(186px, 48px, 667px, 237px); */
   @include mixingfunc.measures(137px, 32px, 692px, 245px);
-  @include mixingfunc.font-style(Inter, normal, 700, 25px, 130%, center);
+  @include mixingfunc.font-style(Arial, normal, 700, 25px, 130%, center);
   background: #d80027;
   border-radius: 20px;
   position: absolute;
@@ -53,7 +53,7 @@
 .btn-d2 {
   position: absolute;
   @include mixingfunc.measures(84px, 32px, 45px, 245px);
-  @include mixingfunc.font-style(Inter, normal, 600, 25px, 130%, center);
+  @include mixingfunc.font-style(Arial, normal, 600, 25px, 130%, center);
   color: #000000;
 }
 .modal-close-d {
@@ -89,13 +89,13 @@
   .mention-modal {
     position: absolute;
     @include mixingfunc.measures(138px, 32px, 39px, 101px);
-    @include mixingfunc.font-style(Inter, normal, 400, 25px, 130%, center);
+    @include mixingfunc.font-style(Arial, normal, 400, 25px, 130%, center);
     color: #000000;
   }
   .type-modal {
     position: absolute;
     @include mixingfunc.measures(114px, 32px, 39px, 133px);
-    @include mixingfunc.font-style(Inter, normal, 400, 25px, 130%, center);
+    @include mixingfunc.font-style(Arial, normal, 400, 25px, 130%, center);
     color: #000000;
   }
   .close {
@@ -129,7 +129,7 @@
   left: 466px;
   top: 491px;
 
-  font-family: "Poppins";
+  font-family: Arial;
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
