--- a/src/sass/_news.scss
+++ b/src/sass/_news.scss
@@ -1,12 +1,12 @@
 @use "mixingfunc";
 /* ----------------------Section Form---------------------------- */
-.cont-new-resource {
+.cont-new-news {
   @include mixingfunc.measures(1251px, 840px, 424px, 144px);
   position: absolute;
   background: #ffffff;
   border-radius: 20px;
 
-  .title-resource {
+  .title-news {
     box-sizing: border-box;
     padding-left: 19px;
     padding-right: 10px;
@@ -19,15 +19,14 @@
     border: 1px solid #8f8f8f;
     border-radius: 10px;
     font-size: 25px;
-    
   }
 }
-.open-form-resource {
+.open-form-news {
   transform: translateY(-200%);
 }
 
-#cont-form-resource {
-  .input-category-resource {
+#cont-form-news {
+  .input-category-news {
     box-sizing: border-box;
     position: absolute;
     @include mixingfunc.measures(590px, 51px, 29px, 131px);
@@ -38,42 +37,44 @@
     color: #000000;
   }
 
-  .input-tags-resource{
+  .input-price-news {
     box-sizing: border-box;
     position: absolute;
-    @include mixingfunc.measures(590px, 51px, 632px, 131px);
-    @include mixingfunc.font-style(Arial, normal, 400, 25px, 130%, justify);
+    @include mixingfunc.measures(590px, 51px, 633px, 131px);
     border: 1px solid #8f8f8f;
     border-radius: 10px;
-    padding-left: 19px;
+    font-family: Arial;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 25px;
+    line-height: 130%;
     color: #000000;
-    
-
+    padding-left: 19px;
   }
 
-
-  #area-resource {
+  #area-news {
     box-sizing: border-box;
+
     position: absolute;
     width: 1194px;
-    height: 530px;
+    height: 443px;
     left: 29px;
     top: 200px;
     border-radius: 10px;
-    .txtarea-resource {
-      margin-top: 0px;
+    .txtarea-news {
+      margin-top: 40px;
       resize: none;
       border-radius: 10px;
       width: 1194px;
-      height: 530px;
+      height: 483px;
     }
   }
 }
-#create-resource {
+#create-news {
   position: absolute;
-  width: 236px;
+  width: 226px;
   height: 48px;
-  left: 987px;
+  left: 997px;
   top: 771px;
 
   background: #338af3;
@@ -84,37 +85,15 @@
   font-size: 25px;
   line-height: 130%;
   transition: all 0.4s ease;
-  outline:none;
-  border: 0;
 
   color: #ffffff;
   &:hover {
-    background: rgb(140, 168, 250);
-    /* color: #000;
-    border: 1px solid; */
+    background: #fff;
+    color: #000;
   }
 }
-.cancel-form{
-  position: absolute;
-  width: 180px;
-  height: 48px;
-  left: 35px;
-  top: 771px;
-  background:white ;
-  font-family: Arial;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 25px;
-  border-radius: 20px;
-  border: 0.5px solid  rgb(150, 148, 148); 
-  transition: all 0.4s ease;
- 
-  &:hover {
-    background: rgb(238, 238, 238);
-    
-  }
-}
-.font-title-resource {
+
+.font-title-news {
   position: absolute;
   width: 278px;
   height: 39px;
@@ -124,75 +103,20 @@
   font-family: Arial;
   font-style: normal;
   font-weight: 600;
-  font-size: 30px;
+  font-size: 28px;
   line-height: 130%;
   /* identical to box height, or 39px */
 
   color: #000000;
 }
 
-
-.input-category-resource {
-  box-sizing: border-box;
-  position: absolute;
-  @include mixingfunc.measures(590px, 51px, 29px, 131px);
-  @include mixingfunc.font-style(Arial, normal, 400, 25px, 130%, justify);
-  border: 1px solid #8f8f8f;
-  border-radius: 10px;
-  padding-left: 19px;
-  color: #000000;
-}
-
-.font-title-resource {
-  position: absolute;
-  width: 400px;
-  height: 39px;
-  left: 30px;
-  top: 11px;
-
-  font-family: Arial;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 28px;
-  line-height: 130%;
-}
-
-.input-offer-resource {
-  box-sizing: border-box;
-  position: absolute;
-  @include mixingfunc.measures(590px, 51px, 633px, 197px);
-  border: 1px solid #8f8f8f;
-  border-radius: 10px;
-  font-family: Arial;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 25px;
-  line-height: 130%;
-  color: #000000;
-  padding-left: 19px;
-}
-
-#area-resource {
-  box-sizing: border-box;
-
-  position: absolute;
-  width: 1194px;
-  height: 443px;
-  left: 29px;
-  top: 200px;
-  border-radius: 10px;
-  .txtarea-resource {
-    margin-top: 70px;
-    resize: none;
-    border-radius: 10px;
-    width: 1194px;
-    height: 483px;
-  }
+.none-news {
+  display: none;
 }
 
 /*----------------------------- Section Table---------------------- */
 
-.cont-tables-resource {
+.cont-tables-news {
   //@include mixingfunc.measures(1051px, 594px, 344px, 142px);
   margin: 142px 45px 288px 424px;
 
@@ -202,14 +126,14 @@
   border-radius: 20px;
   position: absolute;
 
-  .cont-table-resource_blue {
+  .cont-table-news_blue {
     overflow-y: auto;
     width: 1251px;
     height: 529px;
     border-radius: 18px;
   }
 
-  .table-resource {
+  .table-news {
     width: 1251px;
     height: 529px;
     background: #ffffff;
@@ -217,19 +141,19 @@
     border-collapse: collapse;
     th {
       @include mixingfunc.font-style(
-        arial,
+        Helvetica,
         normal,
         600,
         30px,
         130%,
         center
       );
-      font-family: Arial;
+      font-family: Arial, Helvetica, sans-serif;
       border: solid 1px black;
       max-height: 53px;
     }
     td {
-      @include mixingfunc.font-style(Arial, normal, 400, 25px, 130%, left);
+      @include mixingfunc.font-style(Helvetica, normal, 400, 25px, 130%, left);
       border: solid 1px black;
       padding-left: 17px;
       padding-right: 17px;
@@ -240,12 +164,12 @@
     }
   }
 }
-.up-table-resource {
+.up-table-news {
   transform: translateY(-200%);
 }
 
-.btn-resource {
-  @include mixingfunc.measures(256px, 48px, 980px, 539px);
+.btn-news {
+  @include mixingfunc.measures(226px, 48px, 1000px, 539px);
   @include mixingfunc.font-style(Arial, normal, 600, 25px, 130%, center);
   background: #338af3;
   border-radius: 20px;
@@ -265,9 +189,9 @@
 
 /*------------------Section Modal-----------*/
 
-#modal-container-resource {
-   opacity: 0;
-  visibility: hidden;  
+#modal-container-news {
+  opacity: 0;
+  visibility: hidden;
   position: absolute;
   z-index: 1000;
   @include mixingfunc.measures(100%, 100%, 0, 0);
@@ -275,7 +199,7 @@
 }
 
 
-.modal-resource {
+.modal-news {
   position: relative;
   width: 930px;
   height: 800px;
@@ -285,10 +209,10 @@
  background-color: #ffffff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 20px;
-  transition: transform 1.2s;
+  transition: transform 1s;
   transform: translateY(0%);
 
-  .close-resource {
+  .close-news {
     position: absolute;
     left: 94.2%;
     right: 1.72%;
@@ -301,7 +225,7 @@
     }
   }
 
-  .cont-p-resource {
+  .cont-p-news {
     position: absolute;
     width: 920px;
     max-height: 785px;
@@ -314,27 +238,21 @@
   }
  
 }
-.modal-clos {
+.modal-cl {
   transform: translateY(-200%); 
  }
-
-
-
-
 /*-------------Modal delete --------------------------*/
 
 
-/*modal-container*/
-#modal-container-dr {
-  opacity: 0;
+
+#modal-container-dc {
   visibility: hidden;
   position: absolute;
   z-index: 1000;
   @include mixingfunc.measures(100%, 100%, 0, 0);
   background-color: rgba(143, 143, 143, 0.65);
 }
-
-.modal-dr {
+.modal-dc {
   box-sizing: border-box;
   position: absolute;
   @include mixingfunc.measures(898px, 305px, 25%, 381px);
@@ -345,7 +263,6 @@
   border-radius: 20px;
   transition: transform 1s;
   transform: translateY(0%);
-  /*modal resource*/
 
   h3 {
     position: absolute;
@@ -354,7 +271,7 @@
     color: #000000;
   }
 }
-#text-dr {
+#text-dc {
   box-sizing: border-box;
   position: absolute;
   @include mixingfunc.measures(808px, 129px, 45px, 82px);
@@ -367,7 +284,7 @@
   padding-top: 12px;
 }
 
-.bnt-dr {
+.bnt-dc {
   position: absolute;
   /*   @include mixingfunc.measures(186px, 48px, 667px, 237px); */
   @include mixingfunc.measures(137px, 32px, 692px, 245px);
@@ -378,56 +295,47 @@
   color: #ffffff;
 }
 
-.btn-dr2 {
+.btn-dc2 {
   position: absolute;
   @include mixingfunc.measures(84px, 32px, 45px, 245px);
   @include mixingfunc.font-style(Arial, normal, 600, 25px, 130%, center);
   color: #000000;
 }
-.modal-close-dr {
+.modal-close-dc {
   transform: translateY(-200%);
-  /*modal close*/
 }
 
 
-
-/*----------------buttons admin------------------*/
-.icons-resource {
+.icons-news {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   i {
-    width: 35px;
-    height: 43px;
-    padding-top: 3px;
-    transition: all 0.3s ease;
+    width: 30px;
+    height: 30px;
   }
 
-  .edit-resource {
-    font-size: 34px;
+  .edit-news {
+    font-size: 30px;
     color: #ff9811;
+    transition: news5s ease;
     &:hover {
       color: #6e7f8f;
     }
   }
-  .remove-resource {
-    font-size: 34px;
+  .remove-news {
+    font-size: 30px;
     color: red;
      &:hover {
       color: #6e7f8f;
     }
   }
 
-  .read-resource {
-    font-size: 34px;
+  .read-news {
+    font-size: 30px;
     color: #0057ff;
      &:hover {
       color: #6e7f8f;
     }
   }
-}
-.stylee{
-  color: #d80027;
-  font-family: Arial, Helvetica, sans-serif;
-
 }
