--- a/src/sass/_referrals.scss
+++ b/src/sass/_referrals.scss
@@ -1,12 +1,12 @@
 @use "mixingfunc";
 /* ----------------------Section Form---------------------------- */
-.cont-new-resource {
-  @include mixingfunc.measures(1251px, 840px, 424px, 144px);
+.cont-new-referral {
+  @include mixingfunc.measures(1251px, 276px, 424px, 184px);
   position: absolute;
   background: #ffffff;
   border-radius: 20px;
 
-  .title-resource {
+  .title-referral {
     box-sizing: border-box;
     padding-left: 19px;
     padding-right: 10px;
@@ -22,12 +22,12 @@
     
   }
 }
-.open-form-resource {
+.open-form-referral {
   transform: translateY(-200%);
 }
 
-#cont-form-resource {
-  .input-category-resource {
+
+  .email-referral {
     box-sizing: border-box;
     position: absolute;
     @include mixingfunc.measures(590px, 51px, 29px, 131px);
@@ -38,7 +38,7 @@
     color: #000000;
   }
 
-  .input-tags-resource{
+  .phone-referral{
     box-sizing: border-box;
     position: absolute;
     @include mixingfunc.measures(590px, 51px, 632px, 131px);
@@ -52,29 +52,12 @@
   }
 
 
-  #area-resource {
-    box-sizing: border-box;
-    position: absolute;
-    width: 1194px;
-    height: 530px;
-    left: 29px;
-    top: 200px;
-    border-radius: 10px;
-    .txtarea-resource {
-      margin-top: 0px;
-      resize: none;
-      border-radius: 10px;
-      width: 1194px;
-      height: 530px;
-    }
-  }
-}
-#create-resource {
+#create-referral {
   position: absolute;
   width: 236px;
   height: 48px;
   left: 987px;
-  top: 771px;
+  top: 207px;
 
   background: #338af3;
   border-radius: 20px;
@@ -94,12 +77,12 @@
     border: 1px solid; */
   }
 }
-.cancel-form{
+.cancel-referral{
   position: absolute;
-  width: 180px;
+  width: 170px;
   height: 48px;
-  left: 35px;
-  top: 771px;
+  left: 25px;
+  top: 207px;
   background:white ;
   font-family: Arial;
   font-style: normal;
@@ -114,7 +97,7 @@
     
   }
 }
-.font-title-resource {
+.font-title-referral {
   position: absolute;
   width: 278px;
   height: 39px;
@@ -132,7 +115,7 @@
 }
 
 
-.input-category-resource {
+.input-category-referral {
   box-sizing: border-box;
   position: absolute;
   @include mixingfunc.measures(590px, 51px, 29px, 131px);
@@ -143,7 +126,7 @@
   color: #000000;
 }
 
-.font-title-resource {
+.font-title-referral {
   position: absolute;
   width: 400px;
   height: 39px;
@@ -157,7 +140,7 @@
   line-height: 130%;
 }
 
-.input-offer-resource {
+.input-offer-referral {
   box-sizing: border-box;
   position: absolute;
   @include mixingfunc.measures(590px, 51px, 633px, 197px);
@@ -172,7 +155,7 @@
   padding-left: 19px;
 }
 
-#area-resource {
+#area-referral {
   box-sizing: border-box;
 
   position: absolute;
@@ -181,7 +164,7 @@
   left: 29px;
   top: 200px;
   border-radius: 10px;
-  .txtarea-resource {
+  .txtarea-referral {
     margin-top: 70px;
     resize: none;
     border-radius: 10px;
@@ -192,7 +175,7 @@
 
 /*----------------------------- Section Table---------------------- */
 
-.cont-tables-resource {
+.cont-tables-referral {
   //@include mixingfunc.measures(1051px, 594px, 344px, 142px);
   margin: 142px 45px 288px 424px;
 
@@ -202,14 +185,14 @@
   border-radius: 20px;
   position: absolute;
 
-  .cont-table-resource_blue {
+  .cont-table-referral_blue {
     overflow-y: auto;
     width: 1251px;
     height: 529px;
     border-radius: 18px;
   }
 
-  .table-resource {
+  .table-referral {
     width: 1251px;
     height: 529px;
     background: #ffffff;
@@ -240,11 +223,11 @@
     }
   }
 }
-.up-table-resource {
+.up-table-referral {
   transform: translateY(-200%);
 }
 
-.btn-resource {
+.btn-referral {
   @include mixingfunc.measures(256px, 48px, 980px, 539px);
   @include mixingfunc.font-style(Arial, normal, 600, 25px, 130%, center);
   background: #338af3;
@@ -265,7 +248,7 @@
 
 /*------------------Section Modal-----------*/
 
-#modal-container-resource {
+#modal-container-referral {
    opacity: 0;
   visibility: hidden;  
   position: absolute;
@@ -275,24 +258,24 @@
 }
 
 
-.modal-resource {
+.modal-referral {
   position: relative;
   width: 930px;
-  height: 800px;
+  height: 200px;
   left: 493px;
-  top: 70px;
+  top: 400px;
   border-radius: 10px;
  background-color: #ffffff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 20px;
-  transition: transform 1.2s;
+  transition: transform 1s;
   transform: translateY(0%);
 
-  .close-resource {
+  .close-referral {
     position: absolute;
-    left: 94.2%;
+    left: 890px;
     right: 1.72%;
-    top: 2.50%;
+    top: 10px;
     bottom: 93.65%;
     color: #000;
     z-index: 1000;
@@ -301,7 +284,7 @@
     }
   }
 
-  .cont-p-resource {
+  .cont-p-referral {
     position: absolute;
     width: 920px;
     max-height: 785px;
@@ -315,7 +298,7 @@
  
 }
 .modal-clos {
-  transform: translateY(-200%); 
+  transform: translateY(-400%); 
  }
 
 
@@ -392,7 +375,7 @@
 
 
 /*----------------buttons admin------------------*/
-.icons-resource {
+.icons-referral {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -403,14 +386,14 @@
     transition: all 0.3s ease;
   }
 
-  .edit-resource {
+  .edit-referral {
     font-size: 34px;
     color: #ff9811;
     &:hover {
       color: #6e7f8f;
     }
   }
-  .remove-resource {
+  .remove-referral {
     font-size: 34px;
     color: red;
      &:hover {
@@ -418,7 +401,7 @@
     }
   }
 
-  .read-resource {
+  .read-referral {
     font-size: 34px;
     color: #0057ff;
      &:hover {
@@ -429,5 +412,33 @@
 .stylee{
   color: #d80027;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.refname{
+  display: flex;
+  font-size: 25px;
+  font-weight: 600;
+  align-items: center;
+  justify-content: center;
+  font-family: Arial, Helvetica, sans-serif;
+
+  margin-bottom: 20px;
+}
+.refemail{
+  display: flex;
+  font-size: 25px;
+  align-items: center;
+  justify-content: center;
+  font-family: Arial, Helvetica, sans-serif;
+ 
+  margin-bottom: 20px;
+}
+.refphone{
+  display: flex;
+  font-size: 25px;
+  align-items: center;
+  justify-content: center;
+  font-family: Arial, Helvetica, sans-serif;
 
 }
+
