--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,3 +7,8 @@
 @use "courses";
 @use "promotions.scss";
 @use "resources";
+@use "membership";
+@use "referrals";
+@use "sponsors";
+@use "student";
+@use "news"
