--- a/src/views/activity/actividades.html
+++ b/src/views/activity/actividades.html
@@ -5,31 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/src/css/style.css">
-    <script type="text/javascript" src="/src/js/jquery-1.12.0.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/src/js/editor.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="/src/css/editor.css">
-    <!--     <script type="text/javascript">
-                                                                                                                            $(document).ready(function () {
-                                                                                                                                $('.txtarea').Editor();
-                                                                                                                    
-                                                                                                                                $('#txt-content').Editor('setText', ['<p style="color:red;">Hola</p>']);
-                                                                                                                    
-                                                                                                                                $('#btn-enviar').click(function (e) {
-                                                                                                                                    e.preventDefault();
-                                                                                                                                    $('#txt-content').text($('#txt-content').Editor('getText'));
-                                                                                                                                    $('#frm-test').submit();
-                                                                                                                                });
-                                                                                                                            });	
-                                                                                                                        </script> -->
 
-    <title>Document</title>
+    <link rel="stylesheet" href="/src/css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/suneditor@latest/dist/css/suneditor.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/suneditor@latest/dist/suneditor.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/suneditor@latest/src/lang/en.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5.49.0/lib/codemirror.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/codemirror@5.49.0/lib/codemirror.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/codemirror@5.49.0/mode/htmlmixed/htmlmixed.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/codemirror@5.49.0/mode/xml/xml.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/codemirror@5.49.0/mode/css/css.js"></script>
+    <title>Activities</title>
 </head>
 
 <body>
@@ -37,8 +23,8 @@
 
         <section class="cont-new-review open-form-input">
             <section class=" crud" id="list-select">
-        
-                <p class="crud-title p1">Create Activity</p>
+
+                <p class="crud-title p1">Create activity</p>
                 <form class="crud-form">
                     <input type="hidden" name="idi">
                     <input class="title" type="text" name="activitiName" placeholder="Activity Name" required>
@@ -49,7 +35,7 @@
                         <option>PRO</option>
                         <option>PRO +</option>
                     </select>
-        
+
                     <select class="list-two" name="tags">
                         <option selected disabled="">Optional Tags</option>
                         <option>Read</option>
@@ -57,9 +43,9 @@
                         <option>Speak</option>
                         <option>Listen</option>
                     </select>
-        
+
                     <input class="author" type="text" name="author" placeholder="Author" required>
-        
+
                     <select class="level" name="level" required>
                         <option selected disabled="">Level</option>
                         <option>Level 1</option>
@@ -68,20 +54,21 @@
                         <option>Level 4</option>
                         <option>Level 5</option>
                     </select>
-        
+
                     <div id="area">
                         <textarea name="description" class="txtarea" cols="30" rows="10"> </textarea>
                     </div>
                 </form>
                 <input id="create-review" type="submit" value="Create Activity" class="btn-submit">
+                <input class="cancel-form" type="button" value="Cancel">
             </section>
         </section>
 
         <div class="menu">
             <a href="" class="menu__logo"></a>
             <div class="menu__list">
-                <li><a href="">Students</a></li>
-                <li><a href="">News</a></li>
+                <li><a href="/src/views/student.html">Students</a></li>
+                <li><a href="/src/views/news.html">News</a></li>
                 <li><a href="/src/views/courses/courses.html">Courses</a></li>
                 <li class="press"><a href="/src/views/activity/actividades.html">Activities</a></li>
                 <li><a href="/src/views/resource/resource.html">Resources</a></li>
@@ -89,10 +76,10 @@
                 <li><a href="" class="space">Private Classes</a></li>
                 <div class="space-top">
                     <li class="space2"><a href="/src/views/promotions/promotions.html">Offers</a></li>
-                    <li><a href="">Memberships</a></li>
-                <li><a href="">Referrals</a></li>
-                <li><a href="">Sponsors</a></li>
-                <li><a href="/src/views/index.html">Reviews</a>
+                    <li><a href="/src/views/menbership.html">Memberships</a></li>
+                    <li><a href="/src/views/referrals.html">Referrals</a></li>
+                    <li><a href="/src/views/sponsors.html">Sponsors</a></li>
+                    <li><a href=" /src/views/index.html">Reviews</a>
                 </div>
 
 
@@ -118,82 +105,44 @@
             <button class="btn__activities">Add New Activity</button>
         </section>
 
-        <section id="modal-container">
-            <div class="modal modal-close">
-                <h3 class="title-modal">Activity Number One</h3>
-                <div class="close"><i class="fas fa-times-circle"></i></div>
-                <!--   <p class="mention-modal">Alysha A. Jones</p>
-                <p class="type-modal">Executive</p> -->
-                <div class="modal-container-section">
-                    <p class="parrafo">
-
-                        Commodi similique cupiditate praesentium facere dignissimos quos distinctio possimus sapiente!
-                        Id tempora magnam itaque sed distinctio alias obcaecati est ab repellendus reiciendis quibusdam,
-
-                    </p>
-                    <div class="section-2">
-                        <div class="img-section"> </div>
-                        <div class="aside"> Lorem ipsum dolor sit amet consectetur adipisicing elit. At similique
-                            cupiditate nobis facilis voluptas fuga provident consequuntur dolor possimus eveniet. Vel
-                            exercitationem delectus aperiam saepe quaerat. Doloribus ipsam suscipit fuga.</div>
-
-                    </div>
+        <section id="modal-container-activity">
+            <div class="modal-activity modal-cla">
+                <div class="close-activity"><i class="fas fa-times-circle poi"></i></div>
+                <div class="cont-p-activity">
                 </div>
             </div>
         </section>
 
-<form class="form-delete" action="">
-    <section id="modal-container-de">
-        <div class="modal-de modal-close-de">
-            <h3>Delete item</h3>
+
+
+        <form class="form-delete" action="">
+            <section id="modal-container-de">
+                <div class="modal-de modal-close-de">
+                    <h3>Delete item</h3>
                     <textarea name="cuadro" id="text-de" cols="30" rows="10" placeholder="Reason..." required></textarea>
                     <button type="submit" class="close-de bnt-de">Yes, Delete</button>
                     <button class="close-de btn-de2">Cancel</button>
 
                 </div>
             </section>
-            
-            </form>
-            
-            <section class="container-notify-succes sucesx alert" id="alert">
-                <i class="fas fa-check-circle close-notify-succes"></i>
-                <p class="parrafo-succes"></p>
-                <!--   <i class="fas fa-check-circle check-succes"></i> -->
-
+        </form>
+        
+        <section class="container-notify-succes sucesx alert" id="alert">
+            <i class="fas fa-check-circle close-notify-succes"></i>
+            <p class="parrafo-succes"></p>
         </section>
-        <!--  <div class="alert" id="alert">Algo sucedió..</div> -->
-        
-        
+
+
         <section id="container-noti">
             <div class="noti__idea"></div>
             <p class="noti__parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat deserunt eius,
                 animi fugiat debitis, id ipsa sint recusandae eum nobis odit sequi nihil dicta beatae qui eveniet
                 mollitia, excepturi adipisci.</p>
-        
-        </section> -->
-        
-        <!--        <template id="crud-template">
-                                                                                                                                                                                                                                            <tr>
-                                                                                                                                                                                                                                                <td class="id-activitie"></td>
-                                                                                                                                                                                                                                                <td class="nameActivity"></td>
-                                                                                                                                                                                                                                                <td class="category"></td>
-                                                                                                                                                                                                                                                <td class="tags"></td>
-                                                                                                                                                                                                                                               
-                                                                                                                                                                                                                                                <td>
-                                                                                                                                                                                                                                        
-                                                                                                                                                                                                                                                    <div class="icons">
-                                                                                                                                                                                                                                                        <i class="fas fa-dot-circle read "></i>
-                                                                                                                                                                                                                                                        <i class="fas fa-pen edit"></i>
-                                                                                                                                                                                                                                                        <i class="fas fa-times-circle remove delete"></i>
-                                                                                                                                                                                                                                                    </div>
-                                                                                                                                                                                                                                                </td>
-                                                                                                                                                                                                                                            </tr>
-                                                                                                                                                                                                                                        </template>
-                                                                                                                                                                                                                                 -->
 
+        </section>
     </div>
 
-    <script src="/src/js/index.js" type="module"></script>
+    <script src="/src/js/activities/main-activities.js" type="module"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://kit.fontawesome.com/d65d9c50b6.js" crossorigin="anonymous">
     </script>
